@@ -1,6 +1,5 @@
 import java.io.File;
 import java.io.FileNotFoundException;
-import java.util.Arrays;
 import java.util.Scanner;
 import java.util.ArrayList;
 
@@ -10,33 +9,50 @@ public class DaySix {
         Scanner s = new Scanner(f);
         ArrayList<String[]> list = new ArrayList<>();
 
+        //Part One
         while (s.hasNextLine()) list.add(s.nextLine().trim().split("\\s+"));
-        s.close();
         int size =  list.size();
-        int length = list.get(0).length;
-        Long tempsum;
-        Long totalsum = 0L;
+        int length = list.getFirst().length;
+        long tempsum;
+        long totalsum = 0L;
         for (int i = 0; i < length; i++) {
             tempsum = 0L;
-            if (list.get(size - 1)[i].equals("+")) {
-                for (int j = 0; j < size - 1; j++) {
-                    tempsum += Long.parseLong(list.get(j)[i]);
-                }
-            } else {
+            if (list.get(size - 1)[i].equals("+")) for (int j = 0; j < size - 1; j++) tempsum += Long.parseLong(list.get(j)[i]);
+            else {
                 tempsum = 1L;
-                for (int j = 0; j < size - 1; j++) {
-                    tempsum *= Long.parseLong(list.get(j)[i]);
-                }
+                for (int j = 0; j < size - 1; j++) tempsum *= Long.parseLong(list.get(j)[i]);
             }
-            System.out.println(tempsum);
             totalsum += tempsum;
         }
-        System.out.println(totalsum);
+        System.out.println("Read like human: " + totalsum);
 
+        //Part Two
         s = new Scanner(f);
-        while (s.hasNextLine()) {
-            list.add(s.nextLine().split(""));
+        list = new ArrayList<>();
+        String num;
+        totalsum = 0;
+        while (s.hasNextLine()) list.add(s.nextLine().split(""));
+        length = list.getFirst().length;
+        ArrayList<String> terms = new ArrayList<>();
+        for (int i = length - 1; i >= 0; i--) {
+            num = "";
+            for (int j = 0; j < size - 1; j++) num += list.get(j)[i].trim();
+            terms.add(num);
+            if (list.get(size - 1)[i].equals("+")) {
+                tempsum = 0L;
+                for (String term : terms) tempsum += Integer.parseInt(term);
+                terms = new ArrayList<>();
+                totalsum += tempsum;
+                i--;
+            }
+            if (list.get(size - 1)[i].equals("*")) {
+                tempsum = 1L;
+                for (String term : terms) tempsum *= Integer.parseInt(term);
+                terms = new ArrayList<>();
+                totalsum += tempsum;
+                i--;
+            }
         }
-
+        System.out.println("Read like cephalopod: " + totalsum);
     }
 }
